2012-02-28  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/fpu/w_sqrt.S: New file.
	* sysdeps/sparc/sparc32/fpu/w_sqrtf.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/w_sqrt.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/w_sqrtf.S: New file.
	* sysdeps/sparc/sparc64/fpu/w_sqrt.S: New file.
	* sysdeps/sparc/sparc64/fpu/w_sqrtf.S: New file.

2012-02-29  Joseph Myers  <joseph@codesourcery.com>

	* math/libm-test.inc (llround_test): Move one test from
	lround_test.  Use TEST_f_L in moved test.
	(lround_test): Move misplaced test to llround_test.  Add testcase
	from bug 2561.

2012-02-28  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/fpu/e_expf.S: New file.
	Contributed by Dmitrieva Liubov <liubov.dmitrieva@gmail.com>.

2012-02-28  Stanislav Brabec  <sbrabec@suse.cz>

	[BZ #13637]
	* posix/regex_internal.c (re_string_skip_chars): Fix miscomputation
	of remain_len that may cause incomplete multi-byte character and
	false match.
	* posix/bug-regex33.c: New file.
	* posix/Makefile (tests): Add bug-regex33.

2012-02-28  Joseph Myers  <joseph@codesourcery.com>

	* manual/macros.texi: New file.
	* Makefile (INSTALL, NOTES): Depend on manual/macros.texi.
	* manual/libc.texinfo: Include macros.texi.
	* manual/creatute.texi: Likewise.
	* manual/install.texi: Likewise.
	* manual/arith.texi: Use macros @Theglibc{}, @theglibc{} and
	@glibcadj{} in references to the GNU C Library.
	* manual/charset.texi: Likewise.
	* manual/conf.texi: Likewise.
	* manual/contrib.texi: Likewise.  Consistently use "GNU C Library"
	when not using those macros.
	* manual/creature.texi: Likewise.
	* manual/crypt.texi: Likewise.
	* manual/errno.texi: Likewise.
	* manual/filesys.texi: Likewise.
	* manual/header.texi: Likewise.
	* manual/install.texi: Likewise.
	* manual/intro.texi: Likewise.
	* manual/io.texi: Likewise.
	* manual/job.texi: Likewise.
	* manual/lang.texi: Likewise.
	* manual/libc.texiinfo: Likewise.
	* manual/llio.texi: Likewise.