@@ -13,7 +13,7 @@ Version 2.16
   5993, 6884, 6907, 9739, 9902, 10110, 10140, 10210, 11174, 11322, 11365,
   11494, 12047, 13058, 13525, 13526, 13527, 13528, 13529, 13530, 13531,
   13532, 13533, 13547, 13551, 13552, 13553, 13555, 13559, 13583, 13618,
-  13637, 13695, 13704, 13738
+  13637, 13695, 13704, 13706, 13738
 
 * ISO C11 support:
 
